# agri-fly

./: .gitignore  .gitmodules  CMakeLists.txt  GyuTae.unity  LICENSE  README.md  TreeGenerator.cs  citation.cff
AIFS_ROS/: README  README.md  makeProjects_AIFS.sh  rosbag_record_airsim.sh
AIFS_ROS/hiperlab_common/: CMakeLists.txt  package.xml
AIFS_ROS/hiperlab_components/: CMakeLists.txt  package.xml
AIFS_ROS/hiperlab_hardware/: CMakeLists.txt  package.xml
AIFS_ROS/hiperlab_hardware/msg/: PoseEulerStamped.msg
AIFS_ROS/hiperlab_hardware/src/cmake/: FindLibUSB.cmake
AIFS_ROS/hiperlab_hardware/src/joystick/: joystick_identification._cpp  joystickmain.cpp
AIFS_ROS/hiperlab_hardware/src/keyboard/: keyboardmain.cpp
AIFS_ROS/hiperlab_rostools/: CMakeLists.txt  package.xml
AIFS_ROS/hiperlab_rostools/launch/: agrifly.launch
AIFS_ROS/hiperlab_rostools/msg/: controller_diagnostics.msg  controller_input.msg  controller_output.msg  gps_output.msg  imu_output.msg  joystick_values.msg  mocap_output.msg  planner_diagnostics.msg  planner_input.msg  planner_output.msg  planner_statistics.msg  polynomial_trajectory.msg  radio_command.msg  simulator_truth.msg  telemetry.msg
AIFS_ROS/hiperlab_rostools/src/AirSimBridge/: main.cpp
AIFS_ROS/hiperlab_rostools/src/QuadGPSRatesControl/: ExampleVehicleStateMachine.cpp  ExampleVehicleStateMachine.hpp  main.cpp
AIFS_ROS/hiperlab_rostools/src/QuadMocapRatesControl/: ExampleVehicleStateMachine.cpp  ExampleVehicleStateMachine.hpp  main.cpp
AIFS_ROS/hiperlab_rostools/src/QuadRappidsPlannerAndController/: ExampleVehicleStateMachine.cpp  ExampleVehicleStateMachine.hpp  main.cpp  trajectory.txt
AIFS_ROS/hiperlab_rostools/src/Simulator/: main.cpp
AIFS_ROS/hiperlab_rostools/src/StandAloneSimulator/: main.cpp
AIFS_ROS/hiperlab_rostools/src/SyncSimulator/: main.cpp
AIFS_ROS/hiperlab_rostools/src/VehicleMonitor/: JoystickMonitor.cpp  JoystickMonitor.hpp  VehicleMonitor.cpp  VehicleMonitor.hpp  main.cpp
Common/: CMakeLists.txt
Common/Common/: blank.cpp
Common/Common/DataTypes/: RadioTypes.hpp  TelemetryPacket.hpp
Common/Common/Math/: LowPassFilterFirstOrder.hpp  LowPassFilterSecondOrder.hpp  Matrix.hpp  RootFinder.hpp  Rotation.hpp  Trajectory.hpp  Vec3.hpp
Common/Common/Misc/: TerminalColors.hpp
Common/Common/Time/: BaseTimer.hpp  HardwareTimer.hpp  ManualTimer.hpp  Timer.hpp  perf_counter.cpp  perf_counter.hpp
Components/: CMakeLists.txt
Components/Components/DepthImagePlanner/: DepthImagePlanner.cpp  DepthImagePlanner.hpp  MonotonicTrajectory.hpp  Pyramid.hpp
Components/Components/Logic/: KalmanFilter6DOF.cpp  KalmanFilter6DOF.hpp  PanicReason.hpp  QuadcopterAngularVelocityController.hpp  QuadcopterAttitudeController.hpp  QuadcopterConstants.hpp  QuadcopterLogic.cpp  QuadcopterLogic.hpp  QuadcopterMixer.hpp  QuadcopterPositionController.hpp
Components/Components/Offboard/: EstimatedState.hpp  GPSIMUStateEstimator.cpp  GPSIMUStateEstimator.hpp  GPSStateEstimator.cpp  GPSStateEstimator.hpp  MocapStateEstimator.cpp  MocapStateEstimator.hpp  PredictionPipe.hpp  QuadcopterController.cpp  QuadcopterController.hpp  SafetyNet.hpp
Components/Components/Simulation/: ArucoCamera.cpp  ArucoCamera.hpp  CommunicationsDelay.hpp  Motor.cpp  Motor.hpp  Quadcopter_T.cpp  Quadcopter_T.hpp  SimulationObject.hpp  SimulationObject6DOF.hpp  UWBNetwork.cpp  UWBNetwork.hpp  UWBRadio.hpp
Components/Components/TrajectoryGenerator/: RapidTrajectoryGenerator.cpp  RapidTrajectoryGenerator.hpp  SingleAxisTrajectory.cpp
Simulator/: CMakeLists.txt  main.cpp
Simulator/Rappids_Simulator/: CMakeLists.txt  main.cpp
